fix : 修复api展示信息问题,修复数据响应问题

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/server/index.js",
   "scripts": {
     "start": "node src/server/index.js",
-    "login": "node scripts/oauth-server.js",
+    "login": "node scripts/oauth-server.js --callback-port 8888",
     "dev": "node --watch src/server/index.js"
   },
   "keywords": [
